--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "programmingProjects/IssueTracker"]
 	path = programmingProjects/IssueTracker
 	url = https://github.com/AlexanderGardiner/IssueTracker
+[submodule "programmingProjects/static/Slime-Mould"]
+	path = programmingProjects/static/Slime-Mould
+	url = https://github.com/AlexanderGardiner/Slime-Mould
+[submodule "programmingProjects/static/Platformerv2"]
+	path = programmingProjects/static/Platformerv2
+	url = https://github.com/AlexanderGardiner/Platformerv2
