--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "express": "^4.18.2",
     "next": "^14.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
