--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "concurrently \"next start\" \"cd programmingProjects\\IssueTracker\\src && node server.js\" \"cd programmingProjects\\octo-scout && node index.js\" \"cd programmingProjects\\ && node staticServer.js\"",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
+    "concurrently": "^8.2.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
