--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "axios": "^1.6.2",
     "concurrently": "^8.2.2",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.4",
     "express": "^4.18.2",
-    "next": "^14.0.1",
+    "next": "^14.0.4",
     "nodemailer": "^6.9.7",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
