Fixed programming projects

--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"cd programmingProjects\\IssueTracker\\src && node server.js\" \"cd programmingProjects\\octo-scout && node index.js\" \"cd programmingProjects\\ && node staticServer.js\" \"cd programmingProjects\\webcut && next dev -p 8004\" \"cd programmingProjects\\OctoScout2024v2 && node server.js\"",
-    "build": "next build",
-    "start": "concurrently \"next start\" \"cd programmingProjects\\IssueTracker\\src && node server.js\" \"cd programmingProjects\\octo-scout && node index.js\" \"cd programmingProjects\\ && node staticServer.js\" \"cd programmingProjects\\webcut && next start -p 8004\" \"cd programmingProjects\\OctoScout2024v2 && node server.js\"",
+    "dev": "start dev.bat",
+    "build": "start build.bat",
+    "start": "start start.bat",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
+    "client-zip": "^2.4.5",
     "concurrently": "^8.2.2",
+    "connect-mongo": "^5.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "^14.0.4",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
+    "express-session": "^1.18.0",
+    "mongodb": "^6.7.0",
     "next": "^14.0.4",
     "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
