Updated programming portfolio and resume page

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
-    "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -22,7 +21,6 @@
     "client-zip": "^2.4.5",
     "concurrently": "^8.2.2",
     "connect-mongo": "^5.1.0",
-    "eslint": "8.49.0",
     "eslint-config-next": "^14.0.4",
     "express": "^4.18.2",
     "express-fileupload": "^1.5.0",
@@ -35,9 +33,12 @@
     "postcss": "^8.4.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^4.12.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.5.2",
+    "eslint": "^8.57.1"
   }
 }
